--- a/config/database.yml
+++ b/config/database.yml
@@ -26,11 +26,34 @@
 
 
 
-development:
+#development:
+#  adapter: mysql2
+#  encoding: utf8
+#  database: blog_development
+#  pool: 5
+#  username: root
+#  password:
+    #  socket: /tmp/mysql.sock
+
+default: &default
   adapter: mysql2
   encoding: utf8
-  database: blog_development
   pool: 5
   username: root
   password:
-  socket: /tmp/mysql.sock
+  host: localhost
+
+
+development:
+  <<: *default
+  database: blog_development
+
+test:
+  <<: *default
+  database: blog_test
+
+production:
+  <<: *default
+  database: blog_production
+  username: root
+  password:
